Making the geometry configurable. When I issue the beam, a warning pops up, which is due to a nonexistent volume name. Search for the term "GetVolume("Envelope")".

--- a/NFromTarget/CMakeLists.txt
+++ b/NFromTarget/CMakeLists.txt
@@ -46,7 +46,7 @@ set(NFROMTARGET_SCRIPTS
 #   projectNFromTarget.in
 #   projectNFromTarget.out
     init_vis.mac
-#   run1.mac
+    run1.mac
 #   run2.mac
     vis.mac
    )
